# ApexPredator

./: .gitmodules  CMakeLists.txt  README.md  vis.natvis
include/: int_def.h
include/apex/: avtx.h  hashes.h  rtpc.h  sarc.h
include/apex/aaf/: aaf.h
include/apex/adf/: adf.h  adf_types.h  builtin_adf.h  sti.h  sti_shared.h
include/apex/package/: archive.h  archives.h  tab.h  tab_archive.h
include/havok/: havok_codegen.h  havok_generated.h  havok_support_types.h
include/havok/tag_file/: havok_tag_file.h  havok_tag_types.h
include/platform/: archive.h  archive_manager.h  common_arrays.h  texture.h
include/utils/: base64.h  common.h  defer.h  dynamic_array.h  dynamic_insert_only_map.h  endian.h  hash_helper.h  lookup3.h  path.h  ply_writer.h  string.h  zlib_wrapper.h
include/utils/buffer/: buffer.h  file_buffer.h  memory_buffer.h
include/utils/gltf/: cgltf_helper.h
src/: adf_type_gen.c  hash_bruteforce.c  hash_collector.c  havok_type_gen.c  main.c  string_hasher.c  type_gen.c
src/apex/: avtx.c  hashes.c  rtpc.c  sarc.c
src/apex/aaf/: aaf.c
src/apex/adf/: adf.c  adf_types.c  sti.c  sti_codegen.c  sti_shared.c
src/apex/package/: archive.c  archives.c  tab_archive.c
src/havok/: havok_codegen.c
src/havok/tag_file/: havok_tag_file.c  havok_tag_types.c
src/platform/: archive.c  archive_manager.c  texture.c
src/utils/: common.c  dynamic_array.c  dynamic_insert_only_map.c  lookup3.c  path.c  ply_writer.c  stb.c  string.c  zlib_wrapper.c
src/utils/buffer/: buffer.c  file_buffer.c  memory_buffer.c
src/utils/gltf/: cgltf_helper.c
